--- a/appstate.json
+++ b/appstate.json
@@ -1,21 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261585333299090%22%3A%22mFI1zK1m%22%2C%2261584741196930%22%3A%22ttSS3ouy%22%2C%2261585780345250%22%3A%22n5gVqV0U%22%2C%2261585462392111%22%3A%22r3oTTtcB%22%2C%2261586031470801%22%3A%229h9kpckr%22%2C%2261585800902450%22%3A%22CPvRQV5B%22%2C%2261585790673491%22%3A%22W37Vgkj7%22%7D",
+        "value": "%7B%2261585333299090%22%3A%22mFI1zK1m%22%2C%2261584741196930%22%3A%22ttSS3ouy%22%2C%2261585780345250%22%3A%22n5gVqV0U%22%2C%2261585462392111%22%3A%22pH3MytAq%22%2C%2261586031470801%22%3A%229h9kpckr%22%2C%2261585800902450%22%3A%22CPvRQV5B%22%2C%2261585790673491%22%3A%22W37Vgkj7%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-12-31T14:54:29.041Z",
-        "lastAccessed": "2025-12-31T14:54:29.095Z"
-    },
-    {
-        "key": "vpd",
-        "value": "v1%3B688x360x2",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-12-31T14:54:29.095Z",
-        "lastAccessed": "2025-12-31T14:54:29.095Z"
+        "creation": "2026-01-01T08:14:49.219Z",
+        "lastAccessed": "2026-01-01T08:14:49.220Z"
     },
     {
         "key": "sb",
@@ -23,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-31T14:54:29.095Z",
-        "lastAccessed": "2025-12-31T14:54:29.095Z"
+        "creation": "2026-01-01T08:14:49.220Z",
+        "lastAccessed": "2026-01-01T08:14:49.220Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-31T14:54:29.095Z",
-        "lastAccessed": "2025-12-31T14:54:29.095Z"
+        "creation": "2026-01-01T08:14:49.220Z",
+        "lastAccessed": "2026-01-01T08:14:49.220Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-31T14:54:29.095Z",
-        "lastAccessed": "2025-12-31T14:54:29.095Z"
+        "creation": "2026-01-01T08:14:49.220Z",
+        "lastAccessed": "2026-01-01T08:14:49.220Z"
     },
     {
         "key": "oo",
@@ -50,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-31T14:54:29.095Z",
-        "lastAccessed": "2025-12-31T14:54:29.095Z"
+        "creation": "2026-01-01T08:14:49.220Z",
+        "lastAccessed": "2026-01-01T08:14:49.220Z"
     },
     {
         "key": "datr",
@@ -59,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-31T14:54:29.095Z",
-        "lastAccessed": "2025-12-31T14:54:29.095Z"
+        "creation": "2026-01-01T08:14:49.220Z",
+        "lastAccessed": "2026-01-01T08:14:49.220Z"
     },
     {
         "key": "locale",
@@ -68,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-31T14:54:29.095Z",
-        "lastAccessed": "2025-12-31T14:54:29.095Z"
+        "creation": "2026-01-01T08:14:49.220Z",
+        "lastAccessed": "2026-01-01T08:14:49.220Z"
     },
     {
         "key": "pas",
@@ -77,8 +68,26 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-31T14:54:29.095Z",
-        "lastAccessed": "2025-12-31T14:54:29.095Z"
+        "creation": "2026-01-01T08:14:49.220Z",
+        "lastAccessed": "2026-01-01T08:14:49.220Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-01T08:14:49.220Z",
+        "lastAccessed": "2026-01-01T08:14:49.220Z"
+    },
+    {
+        "key": "wd",
+        "value": "360x800",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-01T08:14:49.220Z",
+        "lastAccessed": "2026-01-01T08:14:49.220Z"
     },
     {
         "key": "c_user",
@@ -86,43 +95,52 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-31T14:54:29.095Z",
-        "lastAccessed": "2025-12-31T14:54:29.095Z"
+        "creation": "2026-01-01T08:14:49.220Z",
+        "lastAccessed": "2026-01-01T08:14:49.220Z"
     },
     {
         "key": "xs",
-        "value": "37%3A7Ufg7Tjcnz7nXA%3A2%3A1767158363%3A-1%3A-1",
+        "value": "7%3A_9BAdiSrQ8yz_A%3A2%3A1767255254%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-31T14:54:29.095Z",
-        "lastAccessed": "2025-12-31T14:54:29.095Z"
+        "creation": "2026-01-01T08:14:49.220Z",
+        "lastAccessed": "2026-01-01T08:14:49.220Z"
     },
     {
         "key": "fr",
-        "value": "09O2GOOprYvHXdYpY.AWeuv4_mN8ERlz5yH4-KFQ_80McgzkF0kmFCC7wb7CtwJRZi8oA.BpUL_C..AAA.0.0.BpVTjD.AWfth-RTzVGSJdqSlrkyYDnRu8c",
+        "value": "09O2GOOprYvHXdYpY.AWdkE6dNrW9UlOc4C-gXwUxl1VhDc9azyAzk-rCqsnoyWJnX_es.BpUL_C..AAA.0.0.BpVizY.AWfjxQ7XeOIE029g2Lex5w-v0nQ",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-31T14:54:29.095Z",
-        "lastAccessed": "2025-12-31T14:54:29.095Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A3033%3Btimestamp%3A1767192771",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-12-31T14:54:29.095Z",
-        "lastAccessed": "2025-12-31T14:54:29.095Z"
+        "creation": "2026-01-01T08:14:49.220Z",
+        "lastAccessed": "2026-01-01T08:14:49.220Z"
     },
     {
         "key": "fbl_st",
-        "value": "101715183%3BT%3A29453213",
+        "value": "101624900%3BT%3A29454254",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-12-31T14:54:29.095Z",
-        "lastAccessed": "2025-12-31T14:54:29.095Z"
+        "creation": "2026-01-01T08:14:49.220Z",
+        "lastAccessed": "2026-01-01T08:14:49.220Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B744x360x2",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-01T08:14:49.220Z",
+        "lastAccessed": "2026-01-01T08:14:49.220Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A3037%3Btimestamp%3A1767255256",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-01T08:14:49.220Z",
+        "lastAccessed": "2026-01-01T08:14:49.220Z"
     }
-]
+        ]
