--- a/appstate.json
+++ b/appstate.json
@@ -1,30 +1,21 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261586031470801%22%3A%22xiE8Qsid%22%2C%2261585800902450%22%3A%22gm7X3iuX%22%2C%2261585462392111%22%3A%22wPSueKCI%22%7D",
+        "value": "%7B%2261585333299090%22%3A%22mFI1zK1m%22%2C%2261584741196930%22%3A%22ttSS3ouy%22%2C%2261585780345250%22%3A%22n5gVqV0U%22%2C%2261586031470801%22%3A%229h9kpckr%22%2C%2261585800902450%22%3A%22CPvRQV5B%22%2C%2261585790673491%22%3A%22W37Vgkj7%22%2C%2261585462392111%22%3A%220yuD0y4h%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2026-01-02T10:42:10.403Z",
-        "lastAccessed": "2026-01-02T10:42:10.406Z"
-    },
-    {
-        "key": "datr",
-        "value": "PdpMac7ozE38C8KjCx38lL8t",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-02T10:42:10.406Z",
-        "lastAccessed": "2026-01-02T10:42:10.406Z"
+        "creation": "2026-01-02T16:54:44.607Z",
+        "lastAccessed": "2026-01-02T16:54:44.779Z"
     },
     {
         "key": "sb",
-        "value": "PdpMaVmUQiAQLO0BHhrCY8O7",
+        "value": "ql1IaZKqJ9LusSXC7_YpwER5",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-02T10:42:10.406Z",
-        "lastAccessed": "2026-01-02T10:42:10.406Z"
+        "creation": "2026-01-02T16:54:44.779Z",
+        "lastAccessed": "2026-01-02T16:54:44.779Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-02T10:42:10.406Z",
-        "lastAccessed": "2026-01-02T10:42:10.406Z"
+        "creation": "2026-01-02T16:54:44.779Z",
+        "lastAccessed": "2026-01-02T16:54:44.779Z"
     },
     {
         "key": "ps_n",
@@ -41,26 +32,26 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-02T10:42:10.406Z",
-        "lastAccessed": "2026-01-02T10:42:10.406Z"
+        "creation": "2026-01-02T16:54:44.779Z",
+        "lastAccessed": "2026-01-02T16:54:44.779Z"
     },
     {
-        "key": "vpd",
-        "value": "v1%3B688x360x2",
+        "key": "oo",
+        "value": "v1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-02T10:42:10.406Z",
-        "lastAccessed": "2026-01-02T10:42:10.406Z"
+        "creation": "2026-01-02T16:54:44.779Z",
+        "lastAccessed": "2026-01-02T16:54:44.779Z"
     },
     {
-        "key": "pas",
-        "value": "61584741196930%3AXjPKiOiY5i%2C61585462392111%3AIh3xQkNRR4%2C61586031470801%3AEWXWTSK2xB%2C61585800902450%3AEF7X3TW2co",
+        "key": "datr",
+        "value": "f7lQafMLPb4_NTsU_TOtO3UZ",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-02T10:42:10.406Z",
-        "lastAccessed": "2026-01-02T10:42:10.406Z"
+        "creation": "2026-01-02T16:54:44.779Z",
+        "lastAccessed": "2026-01-02T16:54:44.779Z"
     },
     {
         "key": "locale",
@@ -68,8 +59,35 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-02T10:42:10.406Z",
-        "lastAccessed": "2026-01-02T10:42:10.406Z"
+        "creation": "2026-01-02T16:54:44.779Z",
+        "lastAccessed": "2026-01-02T16:54:44.779Z"
+    },
+    {
+        "key": "pas",
+        "value": "61585333299090%3ALLhcklHzOS%2C61585171757289%3AlJJTNIokyL%2C61584741196930%3ANVM0E1HKBf%2C61585780345250%3AKcGwCO2gIz%2C61585840043798%3AFRWYB3PIPM%2C100004900666098%3AcdHMtDrYwO%2C61551050906770%3APCHo5i5f0C%2C61585462392111%3AA3MOWWm39G%2C61586031470801%3AxJnUjeKzrS%2C61585800902450%3AFB4uuN3EIz%2C61585974654922%3ALKRqMft27C%2C61585790673491%3AD33FJRAXKO",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-02T16:54:44.779Z",
+        "lastAccessed": "2026-01-02T16:54:44.779Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-02T16:54:44.779Z",
+        "lastAccessed": "2026-01-02T16:54:44.780Z"
+    },
+    {
+        "key": "wd",
+        "value": "360x800",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-02T16:54:44.780Z",
+        "lastAccessed": "2026-01-02T16:54:44.780Z"
     },
     {
         "key": "c_user",
@@ -77,43 +95,52 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-02T10:42:10.406Z",
-        "lastAccessed": "2026-01-02T10:42:10.406Z"
+        "creation": "2026-01-02T16:54:44.780Z",
+        "lastAccessed": "2026-01-02T16:54:44.780Z"
     },
     {
         "key": "xs",
-        "value": "26%3AZ3XJuEW8lhZ0Uw%3A2%3A1767350321%3A-1%3A-1",
+        "value": "48%3Ac_QXncQ54naN_Q%3A2%3A1767372804%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-02T10:42:10.406Z",
-        "lastAccessed": "2026-01-02T10:42:10.406Z"
+        "creation": "2026-01-02T16:54:44.780Z",
+        "lastAccessed": "2026-01-02T16:54:44.780Z"
     },
     {
         "key": "fr",
-        "value": "0GyMHh1eoNYS2JPkC.AWft0qxiFYgKrqOE2DVO3fo_jQEWf50TzdeByHB9Q1707rSijnU.BpTnHY..AAA.0.0.BpV6Dh.AWclKwsb-P-PZFclHowZWd_Qj6A",
+        "value": "09O2GOOprYvHXdYpY.AWdc14oIOixQgPP7kvK_mr6vri0wBJ68uG0odtoqGrOdnwvjkDo.BpUL_C..AAA.0.0.BpV_gH.AWfWLr9A65ke6SSbZ0V9c-g2cP8",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-02T10:42:10.406Z",
-        "lastAccessed": "2026-01-02T10:42:10.406Z"
+        "creation": "2026-01-02T16:54:44.780Z",
+        "lastAccessed": "2026-01-02T16:54:44.780Z"
     },
     {
         "key": "fbl_st",
-        "value": "101720590%3BT%3A29455841",
+        "value": "101719402%3BT%3A29456213",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-02T10:42:10.406Z",
-        "lastAccessed": "2026-01-02T10:42:10.406Z"
+        "creation": "2026-01-02T16:54:44.780Z",
+        "lastAccessed": "2026-01-02T16:54:44.780Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B688x360x2",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-02T16:54:44.780Z",
+        "lastAccessed": "2026-01-02T16:54:44.780Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A3038%3Btimestamp%3A1767350497",
+        "value": "v2%3Bclient_version%3A3038%3Btimestamp%3A1767372808",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-02T10:42:10.406Z",
-        "lastAccessed": "2026-01-02T10:42:10.406Z"
+        "creation": "2026-01-02T16:54:44.780Z",
+        "lastAccessed": "2026-01-02T16:54:44.780Z"
     }
-        ]
+]
