--- a/appstate.json
+++ b/appstate.json
@@ -1,21 +1,30 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261585333299090%22%3A%22mFI1zK1m%22%2C%2261584741196930%22%3A%22ttSS3ouy%22%2C%2261585780345250%22%3A%22n5gVqV0U%22%2C%2261586031470801%22%3A%229h9kpckr%22%2C%2261585800902450%22%3A%22CPvRQV5B%22%2C%2261585790673491%22%3A%22W37Vgkj7%22%2C%2261585462392111%22%3A%220yuD0y4h%22%7D",
+        "value": "%7B%2261585462392111%22%3A%2267SgJ0BI%22%2C%2261586090094804%22%3A%22BBE4qEqw%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2026-01-02T16:54:44.607Z",
-        "lastAccessed": "2026-01-02T16:54:44.779Z"
+        "creation": "2026-01-03T05:48:32.991Z",
+        "lastAccessed": "2026-01-03T05:48:32.995Z"
     },
     {
-        "key": "sb",
-        "value": "ql1IaZKqJ9LusSXC7_YpwER5",
+        "key": "datr",
+        "value": "PdpMac7ozE38C8KjCx38lL8t",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-02T16:54:44.779Z",
-        "lastAccessed": "2026-01-02T16:54:44.779Z"
+        "creation": "2026-01-03T05:48:32.996Z",
+        "lastAccessed": "2026-01-03T05:48:32.996Z"
+    },
+    {
+        "key": "sb",
+        "value": "PdpMaVmUQiAQLO0BHhrCY8O7",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-03T05:48:32.996Z",
+        "lastAccessed": "2026-01-03T05:48:32.996Z"
     },
     {
         "key": "ps_l",
@@ -23,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-02T16:54:44.779Z",
-        "lastAccessed": "2026-01-02T16:54:44.779Z"
+        "creation": "2026-01-03T05:48:32.996Z",
+        "lastAccessed": "2026-01-03T05:48:32.996Z"
     },
     {
         "key": "ps_n",
@@ -32,98 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-02T16:54:44.779Z",
-        "lastAccessed": "2026-01-02T16:54:44.779Z"
-    },
-    {
-        "key": "oo",
-        "value": "v1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-02T16:54:44.779Z",
-        "lastAccessed": "2026-01-02T16:54:44.779Z"
-    },
-    {
-        "key": "datr",
-        "value": "f7lQafMLPb4_NTsU_TOtO3UZ",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-02T16:54:44.779Z",
-        "lastAccessed": "2026-01-02T16:54:44.779Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_US",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-02T16:54:44.779Z",
-        "lastAccessed": "2026-01-02T16:54:44.779Z"
-    },
-    {
-        "key": "pas",
-        "value": "61585333299090%3ALLhcklHzOS%2C61585171757289%3AlJJTNIokyL%2C61584741196930%3ANVM0E1HKBf%2C61585780345250%3AKcGwCO2gIz%2C61585840043798%3AFRWYB3PIPM%2C100004900666098%3AcdHMtDrYwO%2C61551050906770%3APCHo5i5f0C%2C61585462392111%3AA3MOWWm39G%2C61586031470801%3AxJnUjeKzrS%2C61585800902450%3AFB4uuN3EIz%2C61585974654922%3ALKRqMft27C%2C61585790673491%3AD33FJRAXKO",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-02T16:54:44.779Z",
-        "lastAccessed": "2026-01-02T16:54:44.779Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-02T16:54:44.779Z",
-        "lastAccessed": "2026-01-02T16:54:44.780Z"
-    },
-    {
-        "key": "wd",
-        "value": "360x800",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-02T16:54:44.780Z",
-        "lastAccessed": "2026-01-02T16:54:44.780Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61585462392111",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-02T16:54:44.780Z",
-        "lastAccessed": "2026-01-02T16:54:44.780Z"
-    },
-    {
-        "key": "xs",
-        "value": "48%3Ac_QXncQ54naN_Q%3A2%3A1767372804%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-02T16:54:44.780Z",
-        "lastAccessed": "2026-01-02T16:54:44.780Z"
-    },
-    {
-        "key": "fr",
-        "value": "09O2GOOprYvHXdYpY.AWdc14oIOixQgPP7kvK_mr6vri0wBJ68uG0odtoqGrOdnwvjkDo.BpUL_C..AAA.0.0.BpV_gH.AWfWLr9A65ke6SSbZ0V9c-g2cP8",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-02T16:54:44.780Z",
-        "lastAccessed": "2026-01-02T16:54:44.780Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "101719402%3BT%3A29456213",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2026-01-02T16:54:44.780Z",
-        "lastAccessed": "2026-01-02T16:54:44.780Z"
+        "creation": "2026-01-03T05:48:32.996Z",
+        "lastAccessed": "2026-01-03T05:48:32.996Z"
     },
     {
         "key": "vpd",
@@ -131,16 +50,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-02T16:54:44.780Z",
-        "lastAccessed": "2026-01-02T16:54:44.780Z"
+        "creation": "2026-01-03T05:48:32.996Z",
+        "lastAccessed": "2026-01-03T05:48:32.996Z"
     },
     {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A3038%3Btimestamp%3A1767372808",
+        "key": "locale",
+        "value": "en_US",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2026-01-02T16:54:44.780Z",
-        "lastAccessed": "2026-01-02T16:54:44.780Z"
+        "creation": "2026-01-03T05:48:32.996Z",
+        "lastAccessed": "2026-01-03T05:48:32.996Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61586090094804",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-03T05:48:32.996Z",
+        "lastAccessed": "2026-01-03T05:48:32.996Z"
+    },
+    {
+        "key": "xs",
+        "value": "19%3Ak9Vb0vAV0ow5Dw%3A2%3A1767378646%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-03T05:48:32.996Z",
+        "lastAccessed": "2026-01-03T05:48:32.996Z"
+    },
+    {
+        "key": "pas",
+        "value": "61584741196930%3AXjPKiOiY5i%2C61585462392111%3AIh3xQkNRR4%2C61586031470801%3AEWXWTSK2xB%2C61585800902450%3AEF7X3TW2co%2C61586090094804%3ATsLc76k886",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-03T05:48:32.996Z",
+        "lastAccessed": "2026-01-03T05:48:32.996Z"
+    },
+    {
+        "key": "fr",
+        "value": "0GyMHh1eoNYS2JPkC.AWdMYvDMzXpR1thbSXkiQQCp_E8V8KKDL4UdIHcBUMJR2pVxqOk.BpTnHY..AAA.0.0.BpWK2P.AWeosIPK1ji3qv9PsytqOILZK28",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-03T05:48:32.996Z",
+        "lastAccessed": "2026-01-03T05:48:32.996Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101725835%3BT%3A29456987",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-03T05:48:32.996Z",
+        "lastAccessed": "2026-01-03T05:48:32.996Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A3038%3Btimestamp%3A1767419279",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2026-01-03T05:48:32.996Z",
+        "lastAccessed": "2026-01-03T05:48:32.996Z"
     }
 ]
